Review Lecture code

--- a/module-3/00-Review-Project-1/lecture-final/server/src/main/resources/application.properties
+++ b/module-3/00-Review-Project-1/lecture-final/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/world
+spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
 spring.datasource.username=postgres
 spring.datasource.password=postgres1
 spring.datasource.platform=postgresql
